--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "gulp-wrap": "*",
     "gulp-markdown": "*",
     "imagemin-pngquant": "^4.2.0",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jquery-ui-dist": "^1.12.1"
   },
   "dependencies": {
     "browserify": "^13.0.0",
